Add python lower bound.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,12 +18,12 @@ build:
 requirements:
   host:
     - pip
-    - python
+    - python >=3.6
     - setuptools
     - setuptools_scm
   run:
     - setuptools
-    - python
+    - python >=3.6
     - django >=2.0
     - django-appconf >=1.0.3
     - django-ipware >=3,<4
