--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,17 +18,19 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.8
+    - python {{ python_min }}
     - setuptools
     - setuptools_scm
   run:
     - setuptools
-    - python >=3.8
+    - python >={{ python_min }}
     - asgiref >=3.6.0
-    - django >=3.2
+    - django >=4.2
     - django-ipware >=3
 
 test:
+  requires:
+    - python {{ python_min }}
   imports:
     - axes
 
